# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2016-10-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix internal CloudI service bug storing service state when
      both service requests and info messages are queued
      (only observed when duo_mode was true with a high request rate)

2016-10-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve handling of a request timeout in cloudi_service_queue
      when using both mode by always having an empty response sent after
      the timeout of the request expires (including when retries are not used)

2016-10-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve handling of a request timeout in cloudi_service_queue
      when using both mode after a retry
    * Add cloudi_trans_id:microseconds/0 function

2016-09-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make significant improvements to cloudi_service_queue
        * Prevent any incomplete write from creating corrupt data
        * retry service argument functions now works as expected
        * Added retry_delay service argument for destinations that
          are infrequently available

2016-09-26 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix starting a CloudI service with a script or boot file
        * reltool fix in 19.0 changed application load order
        * Needed file read errors returned
    * Improve the Erlang usage examples
    * Update reltool_util

2016-09-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add logging_set CloudI Service API function
    * Update varpool
    * Fixes for dialyzer in cloudi_core repo

2016-09-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cgroup and nice service configuration options
    * Add cgroups Erlang application as a cloudi_core dependency

2016-09-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update GEPD dependency with commit/tag/file specifics
